--- a/src/Pulsewave.Box.Recipe/Pulsewave.Box.Recipe.csproj
+++ b/src/Pulsewave.Box.Recipe/Pulsewave.Box.Recipe.csproj
@@ -34,6 +34,8 @@
 
   <PropertyGroup Label="nuget configuration">
 		<IsPackable>true</IsPackable>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
