--- a/src/Pulsewave.Box.Recipe/Pulsewave.Box.Recipe.csproj
+++ b/src/Pulsewave.Box.Recipe/Pulsewave.Box.Recipe.csproj
@@ -1,38 +1,44 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Label="Project configuration">
-    <TargetFramework>net7.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+  	<PropertyGroup Label="Project configuration">
+    	<TargetFramework>net7.0</TargetFramework>
+    	<LangVersion>latest</LangVersion>
+    	<ImplicitUsings>enable</ImplicitUsings>
+    	<Nullable>enable</Nullable>
+  	</PropertyGroup>
 
-  <PropertyGroup Label="NuGet information">
-    <Title>$(MSBuildProjectName)</Title>
-    <Version>0.1.0</Version>
-    <AssemblyVersion>$(Version)</AssemblyVersion>
+  	<PropertyGroup Label="NuGet information">
+    	<Title>$(MSBuildProjectName)</Title>
+    	<Version>1.0.0</Version>
+    	<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
-    <Authors>Alexandre Beauchamp</Authors>
-    <Company>Pulsewave</Company>
-    <Description>Re-usable cake scripts for Pulsewave.Box NuGets.</Description>
+    	<Authors>Alexandre Beauchamp</Authors>
+    	<Company>Pulsewave</Company>
+    	<Description>Re-usable cake scripts for Pulsewave.Box NuGets.</Description>
 
-    <PackageId>$(MSBuildProjectName)</PackageId>
-    <PackageIcon>logo.png</PackageIcon>
-    <PackageProjectUrl>https://github.com/beauchama/$(MSBuildProjectName.ToLower())</PackageProjectUrl>
+    	<PackageId>$(MSBuildProjectName)</PackageId>
+    	<PackageIcon>logo.png</PackageIcon>
+    	<PackageProjectUrl>https://github.com/beauchama/$(MSBuildProjectName.ToLower())</PackageProjectUrl>
 		<PackageReadmeFile>readme.md</PackageReadmeFile>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageReleaseNotes>https://github.com/beauchama/$(MSBuildProjectName.ToLower())/releases/latest</PackageReleaseNotes>
 		<PackageTags>Cake;Box;Build;Automation;Recipe;cake-recipe;cake-build;script</PackageTags>
-  </PropertyGroup>
 
-  <ItemGroup Label="assets">
+		<StartYear>2023</StartYear>
+		<EndYear>$([System.DateTime]::Today.Year)</EndYear>
+		<CopyrightYear Condition="'$(StartYear)' == '$(EndYear)'">$(StartYear)</CopyrightYear>
+		<CopyrightYear Condition="'$(StartYear)' != '$(EndYear)'">$(StartYear) - $(EndYear)</CopyrightYear>
+		<Copyright>Copyright (c) $(Company) $(CopyrightYear)</Copyright>
+  	</PropertyGroup>
+
+  	<ItemGroup Label="assets">
 		<None Include="..\..\readme.md" Pack="true" PackagePath="\" />
 		<None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
 		<None Include="..\..\assets\images\logo.png" Pack="true" PackagePath="\" />
 		<Folder Include="content\*" Pack="true" PackagePath="\content" />
 	</ItemGroup>
 
-  <PropertyGroup Label="nuget configuration">
+  	<PropertyGroup Label="nuget configuration">
 		<IsPackable>true</IsPackable>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -45,7 +51,7 @@
 		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 	</PropertyGroup>
 
-  <ItemGroup Label="source link">
+  	<ItemGroup Label="source link">
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -57,7 +63,7 @@
 		<None Include="$(MSBuildStartupDirectory)\.editorconfig" Link=".editorconfig" />
 	</ItemGroup>
 
-  <ItemGroup>
+  	<ItemGroup>
 		<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -71,8 +77,4 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="content\" />
-  </ItemGroup>
 </Project>
