--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Cake tools
+[Tt]ools
+
 # User-specific files
 *.rsuser
 *.suo
